--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "types": "./dist/spawn.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Francisco Ryan Tolmasky I",
